--- a/my-portfolio/src/index.css
+++ b/my-portfolio/src/index.css
@@ -1,11 +1,12 @@
 /* src/index.css */
+@import url('https://fonts.googleapis.com/css2?family=Playwrite+GB+S:ital,wght@0,100..400;1,100..400&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
-
 body{
   background-color: #101925;
+  font-family: 'Playwrite GB S', cursive;
 }
 html {
   scroll-behavior: smooth;
