--- a/client/src/index.css
+++ b/client/src/index.css
@@ -12,3 +12,11 @@ html {
   scroll-behavior: smooth;
 }
 
+#tsparticles {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -1; /* Particles above gradient but below content */
+}
