--- a/client/src/index.css
+++ b/client/src/index.css
@@ -5,7 +5,7 @@
 @tailwind utilities;
 
 body{
-  background-color: #101925;
+  background-color: #0f172a;
   font-family: 'Playwrite GB S', cursive;
 }
 html {
